--- a/deployments/deployment.yaml
+++ b/deployments/deployment.yaml
@@ -7,6 +7,7 @@ spec:
     matchLabels:
       app: nginx
   replicas: 1 # tells deployment to run 2 pods matching the template
+  strategy: rollingUpdate
   template:
     metadata:
       labels:
